ecmascript/parser/tests/typescript-errors/tsc/types/tuple/named/namedTupleMembersErrors/input.ts.stderr
error: Expected {, got OptTrailing
  --> $DIR/tests/typescript-errors/tsc/types/tuple/named/namedTupleMembersErrors/input.ts:16:13
   |
16 | export type OptTrailing = [first: string, rest: ...string[]?]; // dots+question on element disallowed
   |             ^^^^^^^^^^^

